# epo-ops-testing-rs

./: .gitignore  Cargo.toml  README.md  example_conf.ini
src/: config.rs  data.rs  deser.rs  lib.rs  main.rs  ops_client.rs
test/: example_page_from_register_search.json  example_register.json
