[package]
name = "epo_ops_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
rust-ini = "0.21.3"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde_json = "1.0.145"
serde = "1.0.228"
chrono = "0.4.42"
log = "0.4.28"
env_logger = "0.11.8"
once_cell = "1.21.3"
glob = "0.3.3"
